<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/short1_dp"
    tools:context=".presentation.mvvm.ui.fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitleLogin"
            style="@style/MyTitleActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_lb_title" />

        <!-- Sección del inicio de sesión -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/short1_dp"
            app:cardElevation="@dimen/short1_dp"
            app:cardBackgroundColor="?attr/colorSurface"
            android:layout_margin="@dimen/short1_dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/short1_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/short1_dp"
                    android:layout_marginBottom="@dimen/short1_dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/MyEditText"
                        android:id="@+id/inputNameOrEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="username"
                        android:hint="@string/input_name_email"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/short1_dp"
                    android:layout_marginBottom="@dimen/short1_dp"
                    android:layout_gravity="center">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/MyEditText"
                            android:id="@+id/inputPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="password"
                            android:hint="@string/input_password"
                            android:inputType="textPassword"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        style="@style/MyImageButton"
                        android:id="@+id/btnSeePassword"
                        android:layout_width="@dimen/short2_dp"
                        android:layout_height="@dimen/short2_dp"
                        android:contentDescription="@string/cd_see_password"
                        android:src="@drawable/show_password"/>
                </LinearLayout>

                <!-- Botón de iniciar sesión -->
                <Button
                    style="@style/MyButton"
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/short3_dp"
                    android:layout_marginHorizontal="@dimen/short1_dp"
                    android:text="@string/fragment_login_btn_login"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>