<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/short1_dp"
    android:orientation="vertical"
    tools:context=".presentation.mvvm.ui.fragment.NotificationsFragment">

    <!-- Título -->
    <TextView
        android:id="@+id/tvTitleNotifications"
        style="@style/MyTitleActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_notifications_lb_title"/>

    <!-- Lista de notificaciones -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/short1_dp"
        app:cardElevation="@dimen/short1_dp"
        app:cardBackgroundColor="?attr/colorSurface"
        android:layout_margin="@dimen/short1_dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotifications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/short1_dp"
            android:scrollbars="vertical"/>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>